chandeliers-lus/tests/compile_fail/ui/clk/bad-clock.stderr
error: Expression `true` cannot be interpreted as a clock.
  --> tests/compile_fail/ui/clk/bad-clock.rs:10:29
   |
10 |         () = ignore(() when true);
   |                             ^^^^

error: Expression `(42 = 12)` cannot be interpreted as a clock.
  --> tests/compile_fail/ui/clk/bad-clock.rs:11:29
   |
11 |         () = ignore(() when (42 = 12));
   |                             ^^^^^^^^^

error: Expression `b()` cannot be interpreted as a clock.
  --> tests/compile_fail/ui/clk/bad-clock.rs:12:29
   |
12 |         () = ignore(() when (b()));
   |                             ^^^^^
